--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-vignettes/*.html linguist-vendored=false
-docs/*.html linguist-vendored=false
+vignettes/**.html linguist-vendored=false
+docs/**.html linguist-vendored=false
