--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 vignettes/** linguist-documentation
 docs/** linguist-documentation
-*.html linguist-detectable=false
+vignettes/*.html linguist-detectable=false
