--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 vignettes/** linguist-documentation
 docs/** linguist-documentation
 vignettes/*.html linguist-detectable=false
+.R linguist-detectable=false
